@@ -307,4 +307,8 @@ Class restartTransition()
 	[[Director sharedDirector] resume];
 }
 
+// purge memroy
+- (void)applicationDidReceiveMemoryWarning:(UIApplication *)application {
+	[[TextureMgr sharedTextureMgr] removeAllTextures];
+}
 @end
